--- a/index.html
+++ b/index.html
@@ -1,9 +1,83 @@
 <html>
-  <head>
-    <title>Ed Orcutt Projects</title>
-  </head>
-  <body>
-    <h1>Ed Orcutt Projects</h1>
-    <p>hello neo ...</p>
-  </body>
+<head>
+    <title>Ed Orcutt</title>
+    <style type="text/css" media="screen"> 
+        * { margin: 0; padding: 0; }
+        body {
+            font-family: 'Palatino Linotype', Palatino, Georgia, 'Times New Roman', serif;
+            background-color: #fff;
+            overflow: auto;
+            color: #ccc;
+            font-size: 25px;
+        }
+        h1 {
+            font-weight: normal;
+            margin-bottom: 30px;
+            color: #222;
+            font-size: 70px;
+        }
+        a {
+            text-decoration: none;
+            color: #777;
+        }
+        a:hover {
+            color: #444;
+        }
+        #container {
+            width: 100%;
+            text-align: center;
+            margin: 100px 0;
+        }
+        #footer {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            border: 0;
+            margin: 10px;
+            font-size: 16px;
+        }
+    </style>
+
+</head>
+<body>
+        
+<!-- container -->
+<div id="container"> 
+    <h1>Ed Orcutt</h1>
+    <a href="http://github.com/edorcutt">code</a>
+    |
+    <a href="http://twitter.com/edorcutt">tweets</a>
+    |
+    <a href="http://edoism.orcutt.org">blog</a>
+    <p></p>
+</div>
+
+<!-- footer -->
+<div id="footer"> 
+    <a href="mailto:edo@lobosllc.com">email</a> 
+    |
+    <a href="http://about.me/edorcutt">about</a> 
+
+</div>
+
+<!-- follow me on twitter --> 
+<!-- <a href="http://www.twitter.com/edorcutt"><img style="position: absolute; top: 10px; right: 10px; border: 0;" src="http://twitter-badges.s3.amazonaws.com/follow_me-c.png" alt="Follow jerome_etienne on Twitter"/></a> -->
+
+<!-- github ribbon --> 
+<a href="https://github.com/edorcutt"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://assets0.github.com/img/ce742187c818c67d98af16f96ed21c00160c234a?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_left_gray_6d6d6d.png&path=" alt="Fork me on GitHub"></a>
+
+<!-- google analytic -->
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28788415-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
+</body>
 </html>
